{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 43,
  "lineage": "05fae5fd-76fa-8630-e5a1-71a50b8d3ded",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/networkInterfaces/Lab5-nic",
            "internal_domain_name_suffix": "z3vb0i1dbiuexnlgma35hhssja.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network/subnets/frontend"
              }
            ],
            "location": "eastus",
            "name": "Lab5-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Lab5-resources"
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.VNet_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "winmain",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/networkInterfaces/Lab5-nic",
            "internal_domain_name_suffix": "z3vb0i1dbiuexnlgma35hhssja.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network/subnets/frontend"
              }
            ],
            "location": "eastus",
            "name": "Lab5-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Lab5-resources"
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.VNet_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG_BackEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/networkSecurityGroups/Lab5-nsg",
            "location": "eastus",
            "name": "Lab5-nsg",
            "resource_group_name": "Lab5-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/networkSecurityGroups/Lab5-nsg/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "Lab5-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Lab5-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG_BackEnd",
            "azurerm_resource_group.rg_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network/subnets/backend",
            "name": "backend",
            "resource_group_name": "Lab5-resources",
            "virtual_network_name": "Lab5-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName",
            "azurerm_virtual_network.VNet_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network/subnets/database",
            "name": "database",
            "resource_group_name": "Lab5-resources",
            "virtual_network_name": "Lab5-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName",
            "azurerm_virtual_network.VNet_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network/subnets/frontend",
            "name": "frontend",
            "resource_group_name": "Lab5-resources",
            "virtual_network_name": "Lab5-network"
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName",
            "azurerm_virtual_network.VNet_varName"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNet_varName",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "231d6acf-0a63-4b28-b566-603bf39e5248",
            "id": "/subscriptions/71d0d2d5-62c8-4313-a101-a62860660b58/resourceGroups/Lab5-resources/providers/Microsoft.Network/virtualNetworks/Lab5-network",
            "location": "eastus",
            "name": "Lab5-network",
            "resource_group_name": "Lab5-resources",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg_varName"
          ]
        }
      ]
    }
  ]
}